fixed error page

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,48 @@
 @import "tailwindcss";
+
+@layer utilities {
+  @keyframes bounce-up {
+    0%, 100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-20px);
+    }
+  }
+
+  @keyframes rotate {
+    0%, {
+        transform: rotate(0deg) scale(0.8);
+    }
+    50% {
+        transform: rotate(360deg) scale(1.5);
+    }
+    100% {
+        transform: rotate(720deg) scale(1);
+    }
+  } 
+
+  @keyframes twinkle {
+    0%, 100% {
+      opacity: 0;
+      transform: scale(0.8);
+    }
+    50% {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+
+  .animate-twinkle {
+    animation: twinkle 3s ease-in-out infinite;
+  }
+
+  .animate-rotate {
+    animation: rotate 9s ease-in-out infinite;
+  }
+
+  .animate-bounce-up {
+    animation: bounce-up 3s ease-in-out infinite;
+  }
+}
+
